--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,6 +1,6 @@
 From openjdk
-
-WORKDIR /First
+cmd["ls"]
+# WORKDIR /First
 # COPY ./First
-RUN javac Frr.java
-CMD ["java","First/Frr.java"]
+# RUN javac Frr.java
+# CMD ["java","First/Frr.java"]
