--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,7 +1,7 @@
 From openjdk
+
+WORKDIR /First
 CMD ["ls"]
-CMD ["pwd"]
-# WORKDIR /First
 # COPY ./First
 # RUN javac Frr.java
 # CMD ["java","First/Frr.java"]
