--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,7 +1,7 @@
 From openjdk
 
 WORKDIR /First
-CMD ["ls"]
+CMD ls
 # COPY /First
-RUN javac /First/Frr.java
+# RUN javac /First/Frr.java
 # CMD ["java","First/Frr.java"]
