--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,7 +1,7 @@
 From openjdk
 
-WORKDIR /First
-CMD ls
-# COPY /First
+WORKDIR /app
+CMD 
+COPY ../First
 # RUN javac /First/Frr.java
 # CMD ["java","First/Frr.java"]
