--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -3,5 +3,5 @@ From openjdk
 WORKDIR /app 
 COPY . /app
 CMD ["ls"]
-RUN javac /First/Frr.java
+RUN javac /app/First
 # CMD ["java","First/Frr.java"]
