--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -2,6 +2,7 @@ From openjdk
 
 WORKDIR /app 
 COPY . /app
+ls
 CMD ["ls"]
-RUN javac /app/First
+RUN javac /app/Frr.java
 # CMD ["java","First/Frr.java"]
